NetBSD Problem Report #51754

From www@NetBSD.org  Fri Dec 30 11:06:53 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C62517A284
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 30 Dec 2016 11:06:52 +0000 (UTC)
Message-Id: <20161230110651.A3B677A349@mollari.NetBSD.org>
Date: Fri, 30 Dec 2016 11:06:51 +0000 (UTC)
From: cfkoch@edgebsd.org
Reply-To: cfkoch@edgebsd.org
To: gnats-bugs@NetBSD.org
Subject: "usbhidaction -v" reports configuration incorrectly
X-Send-Pr-Version: www-1.0

>Number:         51754
>Category:       bin
>Synopsis:       "usbhidaction -v" reports configuration incorrectly
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 30 11:10:00 +0000 2016
>Closed-Date:    Sat Dec 31 10:17:40 +0000 2016
>Last-Modified:  Sat Dec 31 10:17:40 +0000 2016
>Originator:     Charlotte Koch
>Release:        7.99.52
>Organization:
>Environment:
NetBSD sakuracity 7.99.52 NetBSD 7.99.52 (CHARLOTTE) #0: Fri Dec 23 12:03:14 PST 2016  charlotte@sakuracity:/home/charlotte/devel/netbsd/sys/arch/amd64/compile/obj/CHARLOTTE amd64
>Description:
usbhidaction(1) accepts a configuration with the "-c" flag. If you run it with the "-v" flag it basically reports this configuration before running in earnest.

The issue is that if the configuration contains a wildcard character ('*'), then "usbhidaction -v" reports it as a "0", which is incorrect because "0" is actually a totally valid number otherwise.

In other words, "usbhidaction -v" should show a "*" wherever a "*" appears in the configuration, not make up a number.
>How-To-Repeat:
Simply run usbhidaction in verbose mode with a configuration which features a "*" in place of a numerical value.
>Fix:
A proposed patch is available at https://github.com/christiank/src/commit/86c94d7f62d727e4c78478cf1fc4d026a13feca2

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51754 CVS commit: src/usr.bin/usbhidaction
Date: Sat, 31 Dec 2016 10:13:15 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Dec 31 10:13:15 UTC 2016

 Modified Files:
 	src/usr.bin/usbhidaction: usbhidaction.c

 Log Message:
 PR 51754 Charlotte Koch: fix -v output of config parser.


 To generate a diff of this commit:
 cvs rdiff -u -r1.26 -r1.27 src/usr.bin/usbhidaction/usbhidaction.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 31 Dec 2016 10:17:40 +0000
State-Changed-Why:
committed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.