PR 51754 Charlotte Koch: fix -v output of config parser.